# Ray-Tracing

./: .gitignore  CMakeLists.txt
dependencies/GLAD/include/glad/: glad.h
dependencies/GLAD/src/: glad.c
example/: 01-ImageCreation.cpp  02-ImageCreationGPU.cpp  03-SimpleSphere.cpp  04-NormalsColoredSphere.cpp  05-Antialiasing.cpp  06-MultipleObjects.cpp
images/: 01-1-FirstImage.ppm
include/: Camera.hpp  Exception.hpp  Scene.hpp  ScreenQuad.hpp  Shader.hpp  WindowManager.hpp
include/Shapes/: BaseShape.hpp  ShapeTypes.hpp  Sphere.hpp
shaders/: 02-TestShader.frag  03-SimpleSphere.frag  03-SimpleSphere.vert  04-NormalsColoredSphere.frag  05-Antialiasing.frag  06-MultipleObjects.frag
src/: Camera.cpp  Exception.cpp  Scene.cpp  ScreenQuad.cpp  Shader.cpp  WindowManager.cpp
src/Shapes/: BaseShape.cpp  ShapeTypes.cpp  Sphere.cpp
